--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,7 @@
 body {
   margin: 0 auto;
   padding: 0;
+  font-family: 'barlow';
 }
 
 
@@ -30,6 +31,16 @@ main{
 
 .logo__header{
   margin-bottom: 1rem;
+}
+
+.isLoged{
+  display: flex;
+  margin-left: 2rem;
+  align-items: center;
+}
+
+.logout{
+  margin-left: 1rem;
 }
 
 .cadastro{
@@ -68,5 +79,51 @@ main{
 }
 
 .login button{
+  margin-top: 1rem;
+}
+
+.main__frases{
+  display: flex;
+  flex-direction: column;
+}
+
+.titulo__frases{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.lista__frases{
+  display: flex;
+}
+
+.frases{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 21rem;
+  height: 9.3rem;
+  border: 1px solid grey;
+  margin-bottom: 1rem;
+  margin-right: 1rem;
+}
+
+.form__frases{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form__frases input{
+  width: 31rem;
+  height: 12.5rem;
+}
+
+.form__post{
+  display: flex;
+  flex-direction: column;
+}
+
+.form__post button{
   margin-top: 1rem;
 }
