--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
@@ -22,10 +28,13 @@
       <form action="/login" method="post">
         <div class="login">
           <h3>Login</h3>
+          <% if (typeof erro !== 'undefined') { %>
+            <p><%= erro %></p>
+            <% } %> 
           <label for="">E-mail</label>
-          <input type="text" placeholder="E-mail" />
+          <input type="text" placeholder="E-mail" name="email" />
           <label for="">Senha</label>
-          <input type="text" placeholder="Senha" />
+          <input type="password" placeholder="Senha" name="senha" />
           <p>
             Ao usar nosso site declaro que eu aceito que li e aceitei os Termos
             de Uso e Políticas de Privacidade
